--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -1,5 +1,4 @@
-@import url(font-awesome.min.css);
-/* @import url("https://fonts.googleapis.com/css?family=Source+Sans+Pro:300italic,600italic,300,600"); */
+@import url("https://fonts.googleapis.com/css?family=Source+Sans+Pro:300italic,600italic,300,600");
 @import url('https://fonts.googleapis.com/css?family=Raleway:400,400i');
 
 /*
@@ -122,7 +121,7 @@
 
 	body, input, select, textarea {
 		color: #ffffff;
-	/*	font-family: "Source Sans Pro", sans-serif; */
+		font-family: "Source Sans Pro", sans-serif; 
 		font-family: "Raleway", sans-serif;
 		font-weight: 300;
 		font-size: 1rem;
