--- a/css/main.css
+++ b/css/main.css
@@ -25,7 +25,6 @@
 
 body {
 	background-color: black;
-	height: 100vh;
 	width: 100%;
 	color: grey;
 	text-align: center;
@@ -57,6 +56,10 @@ img {
 li {
 	display: inline-block;
 	margin: 1vw;
+}
+
+.content {
+	margin: 40px;
 }
 
 .heading {
