--- a/css/main.css
+++ b/css/main.css
@@ -29,7 +29,7 @@ body {
 	color: grey;
 	text-align: center;
 	font-family: 'Roboto', sans-serif;
-	font-size: 2vw;
+	font-size: 15px;
 	margin: auto;
 
 	opacity: 0;
